# tctlab

./: LICENSE  README.md  pyproject.toml  tctlab.toml
src/tctlab/: .spatres.py.swp  analysis.py  functs.py  motors.py  move.py  plotting.py  process.py  spatres.py  timeres.py
src/tctlab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
