[build-system]
requires = {"hatchling"}
build-backend = "hatchling.build"

[project]
name = "tctlab"
description = "Package for TCT system at Syracuse University"
readme = "README.md"
author = "Bridget Mack"
author_email = "bjmack@syr.edu"

requires-python = ">=3.7"

dependencies = ["numpy", "matplotlib", "pyvisa", "datetime", "progress", "libximc", "mplhep"]
version = "1.0"