[build-system]
requires = {"setuptools>=61.0"}
build-backend = "setuptools.build_meta"

[project]
name = "tctlab"
description = "Package for TCT system at Syracuse University"
readme = "README.md"
authors = [ { name = "Bridget Mack", email = "bjmack@syr.edu" }, ]

requires-python = ">=3.7"

dependencies = ["numpy", "matplotlib", "pyvisa", "datetime", "progress", "libximc", "mplhep"]
version = "1.0"

[project.urls]
Homepage = "https://github.com/bridgetmack/tctlab"